<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Forecastify</string>
    <string name="dummyCity">London,</string>
    <string name="dummyCountry">England</string>
    <string name="dummyDate">Sat, Jan 01</string>
    <string name="weather_icon_descrp">Weather Icon</string>
    <string name="dummyWeather">00</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="dummyWeatherType">Rainy</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="dummyAtmosphericPressure">0</string>
    <string name="wind">Wind</string>
    <string name="dummyWindSpeed">0</string>
    <string name="humidity">Humidity</string>
    <string name="dummyHumiditySize">0</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back Button</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="unit">Units</string>
    <string name="temperature_units">Temperature units</string>
    <string name="wind_speed_units">Wind speed units</string>
    <string name="atmospheric_pressure_unit">Atmospheric pressure units</string>
    <string name="other_settings">Other Settings</string>
    <string name="weather_music">Weather music</string>
    <string name="about_weathernaut">About Weathernaut</string>
    <string name="feedback">Feedback</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="weather_music_descp">Music according to the weather.</string>
    <string name="cancel">Cancel</string>
    <string name="hPa">hPa</string>
    <string name="atm"> atm</string>
    <string name="meters_per_second"> m/s</string>
    <string name="kilometers_per_hour"> km/h</string>
    <string name="miles_per_hour">mph</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="percentage">%</string>
    <string name="dummy_time">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>