<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:visibility="gone"
    app:cardCornerRadius="8dp"
    tools:context=".ui.bottomsheet.BottomSheetDialog"
    tools:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/rectangel_upper"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_rectangle_upper"
                app:layout_constraintEnd_toStartOf="@id/cancel_Button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/constraint_layout"
                />

            <ImageView
                android:id="@+id/cancel_Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:src="@drawable/icon_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/no_Network"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/no_network"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cancel_Button">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:padding="8dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/weatherCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/locationView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical"
                            android:padding="8dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/cityName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito"
                                android:text="@string/dummyCity"
                                android:textColor="@color/textColor"
                                android:textSize="34sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/countryName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito"
                                android:text="@string/dummyCountry"
                                android:textColor="@color/textColor"
                                android:textSize="24sp"
                                android:visibility="gone" />

                        </LinearLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/nunito"
                            android:padding="8dp"
                            android:text="London,"
                            android:textColor="#9A938C"
                            android:textSize="13sp"
                            app:layout_constraintStart_toStartOf="@id/locationView"
                            app:layout_constraintTop_toBottomOf="@id/locationView" />


                        <ImageView
                            android:id="@+id/weatherIcon"
                            android:layout_width="143dp"
                            android:layout_height="139dp"
                            android:contentDescription="@string/weather_icon_descrp"
                            android:src="@drawable/icon_weather_cloud"
                            app:layout_constraintBottom_toBottomOf="@+id/weatherNumericView"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintEnd_toStartOf="@id/weatherNumericView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/date"
                            app:layout_constraintTop_toTopOf="@id/weatherNumericView" />


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/weatherNumericView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/weatherIcon"
                            app:layout_constraintTop_toBottomOf="@id/date">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/weatherNumericValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito"
                                android:text="@string/dummyWeather"
                                android:textColor="@color/textColor"
                                android:textSize="48sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/weatherUnit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito"
                                android:text="@string/celsius"
                                android:textColor="@color/textColor"
                                app:layout_constraintStart_toEndOf="@id/weatherNumericValue"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/weatherType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:text="@string/dummyWeatherType"
                            android:textColor="@color/textColor"
                            app:layout_constraintEnd_toEndOf="@+id/weatherNumericView"
                            app:layout_constraintStart_toStartOf="@+id/weatherNumericView"
                            app:layout_constraintTop_toBottomOf="@+id/weatherNumericView" />


                        <LinearLayout
                            android:id="@+id/weatherDataLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:orientation="vertical"
                            app:layout_constraintTop_toBottomOf="@+id/weatherType">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:background="@drawable/weather_data_row_style"
                                android:padding="8dp">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="10dp"
                                    android:fontFamily="@font/nunito"
                                    android:gravity="center"
                                    android:text="@string/atmospheric_pressure"
                                    android:textColor="@color/textColor"
                                    app:drawableStartCompat="@drawable/icon_atmospheric_pressure"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/atmosphericPressureValue"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="1dp"
                                    android:fontFamily="@font/nunito"
                                    android:text="@string/dummyAtmosphericPressure"
                                    android:textColor="@color/textColor"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/atmosphericPressureUnit"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/atmosphericPressureUnit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito"
                                    android:text="mbar"
                                    android:textColor="@color/textColor"
                                    app:layout_constraintBottom_toBottomOf="@id/atmosphericPressureValue"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="@id/atmosphericPressureValue" />

                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_marginVertical="15dp"
                                android:background="@drawable/weather_data_row_style"
                                android:padding="8dp">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="10dp"
                                    android:fontFamily="@font/nunito"
                                    android:gravity="center"
                                    android:text="@string/wind"
                                    android:textColor="@color/textColor"
                                    app:drawableStartCompat="@drawable/icon_wind"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/windValue"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="1dp"
                                    android:fontFamily="@font/nunito"
                                    android:text="@string/dummyWindSpeed"
                                    android:textColor="@color/textColor"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/windUnit"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/windUnit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito"
                                    android:text="@string/kilometers_per_hour"
                                    android:textColor="@color/textColor"
                                    app:layout_constraintBottom_toBottomOf="@id/windValue"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="@id/windValue" />

                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:background="@drawable/weather_data_row_style"
                                android:padding="8dp">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="10dp"
                                    android:fontFamily="@font/nunito"
                                    android:gravity="center"
                                    android:text="@string/humidity"
                                    android:textColor="@color/textColor"
                                    app:drawableStartCompat="@drawable/icon_drop"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/humidityValue"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="1dp"
                                    android:fontFamily="@font/nunito"
                                    android:text="@string/dummyHumiditySize"
                                    android:textColor="@color/textColor"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/humidityUnit"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/humidityUnit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito"
                                    android:text="@string/percentage"
                                    android:textColor="@color/textColor"
                                    app:layout_constraintBottom_toBottomOf="@id/humidityValue"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="@id/humidityValue" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</com.google.android.material.card.MaterialCardView>